--- a/news
+++ b/news
@@ -481,7 +481,18 @@
     "urlToImage": "https://cdn.ksilbo.co.kr/news/photo/202512/1043466_625293_1939.jpg",
     "publishedAt": "2025.12.05 00:00",
     "content": "4일 남구 삼호섬 인근에서 독수리들이 먹이활동을 하고 있다. 녹색에너지촉진시민포럼은 내년 1월3일부터 멸종위기 2급 독수리의 생태를 학습하는 독수리학교를 개최할 예정이다."
-  }
+  },
+  {
+      "id": 45, 
+      "name": "문화일보", 
+      "author": "곽시열 기자",
+      "title": "독수리 날갯짓 보러 오세요”…울산시, ‘독수리학교’ 운영",
+      "description": "울산시가 겨울철 울산을 찾은 독수리를 관찰할 수 있는 체험프로그램을 운영한다.",
+      "url": "https://www.munhwa.com/article/11556028",
+      "urlToImage": "https://wimg.munhwa.com/news/cms/2025/12/23/news-p.v1.20251223.79ee855056b24c769d515514a902646a_P1.jpg",
+      "publishedAt": "2025.12.23 07:47",
+      "content": "울산시는 천연기념물이자 멸종위기 야생동물 Ⅱ급인 독수리를 주제로 한 체험형 생태교육 프로그램 ‘2026년 울산 독수리학교’ 참가자를 모집한다고 23일 밝혔다."
+    }
   ]
  
 
